Add inventory lease frontend and planning docs